Added some configuration options

--- a/src/SettingsForm.form
+++ b/src/SettingsForm.form
@@ -2,7 +2,7 @@
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="SettingsForm">
   <grid id="27dc6" binding="panel1" default-binding="true" layout-manager="BorderLayout" hgap="0" vgap="0">
     <constraints>
-      <xy x="20" y="20" width="659" height="400"/>
+      <xy x="20" y="20" width="659" height="411"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -32,20 +32,13 @@
                   <text value="Here you can configure how the injection code generation should look like"/>
                 </properties>
               </component>
-              <component id="26ac7" class="javax.swing.JCheckBox" binding="seperateLinesCheckBox">
+              <component id="26ac7" class="javax.swing.JCheckBox" binding="separateLinesCheckBox">
                 <constraints>
                   <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <selected value="false"/>
                   <text value="Attribute and field declaration on seperate lines"/>
-                </properties>
-              </component>
-              <component id="a47ed" class="javax.swing.JCheckBox" binding="emptyLineCheckBox">
-                <constraints>
-                  <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <text value="Add an empty line after every injection"/>
                 </properties>
               </component>
               <grid id="d4a5" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="0">
@@ -117,6 +110,14 @@
                   <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties/>
+              </component>
+              <component id="84270" class="javax.swing.JCheckBox" binding="emptyLineBetweenInjectionsCheckBox">
+                <constraints>
+                  <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="Empty line inbetween injections"/>
+                </properties>
               </component>
             </children>
           </grid>
