--- a/src/SettingsForm.form
+++ b/src/SettingsForm.form
@@ -2,7 +2,7 @@
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="SettingsForm">
   <grid id="27dc6" binding="panel1" default-binding="true" layout-manager="BorderLayout" hgap="0" vgap="0">
     <constraints>
-      <xy x="20" y="20" width="659" height="411"/>
+      <xy x="20" y="20" width="659" height="450"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -12,7 +12,7 @@
         <properties/>
         <border type="none"/>
         <children>
-          <grid id="ea084" layout-manager="GridLayoutManager" row-count="8" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="ea084" layout-manager="GridLayoutManager" row-count="9" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints border-constraint="Center"/>
             <properties>
@@ -59,7 +59,7 @@
                       <visible value="true"/>
                     </properties>
                   </component>
-                  <component id="97bec" class="javax.swing.JTextField" binding="prefixTextField">
+                  <component id="97bec" class="javax.swing.JTextField" binding="declarationPrefixTextField">
                     <constraints/>
                     <properties>
                       <minimumSize width="150" height="24"/>
@@ -75,18 +75,18 @@
                 <properties/>
                 <border type="none"/>
                 <children>
-                  <component id="2802" class="javax.swing.JLabel">
+                  <component id="2802" class="javax.swing.JLabel" binding="declarationInfix">
                     <constraints/>
                     <properties>
                       <maximumSize width="100" height="16"/>
                       <minimumSize width="50" height="16"/>
                       <preferredSize width="140" height="16"/>
                       <requestFocusEnabled value="false"/>
-                      <text value="Declaration postfix"/>
+                      <text value="Name prefix"/>
                       <visible value="true"/>
                     </properties>
                   </component>
-                  <component id="3c78c" class="javax.swing.JTextField" binding="postfixTextField">
+                  <component id="3c78c" class="javax.swing.JTextField" binding="namePrefixTextField">
                     <constraints/>
                     <properties>
                       <minimumSize width="150" height="24"/>
@@ -97,7 +97,7 @@
               </grid>
               <component id="aa39" class="javax.swing.JTextArea" binding="textArea">
                 <constraints>
-                  <grid row="7" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                  <grid row="8" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
                   <rows value="12"/>
@@ -127,6 +127,33 @@
                   <text value="The injection property name starts with a capital letter"/>
                 </properties>
               </component>
+              <grid id="b67c7" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="0">
+                <constraints>
+                  <grid row="7" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="1" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties/>
+                <border type="none"/>
+                <children>
+                  <component id="4b436" class="javax.swing.JLabel">
+                    <constraints/>
+                    <properties>
+                      <maximumSize width="100" height="16"/>
+                      <minimumSize width="50" height="16"/>
+                      <preferredSize width="140" height="16"/>
+                      <requestFocusEnabled value="false"/>
+                      <text value="Declaration postfix"/>
+                      <visible value="true"/>
+                    </properties>
+                  </component>
+                  <component id="c5048" class="javax.swing.JTextField" binding="declarationPostfixTextField">
+                    <constraints/>
+                    <properties>
+                      <minimumSize width="150" height="24"/>
+                      <preferredSize width="150" height="24"/>
+                    </properties>
+                  </component>
+                </children>
+              </grid>
             </children>
           </grid>
         </children>
